src/test/deca/context/invalid/Objet/Redeclaration-Meth.deca
// Description:
//      Declaring two methods with same ident
//
// Results:
//      Line 13 : Rule (2.6) Method ident already used
//
// History:
//      created on 17/1/2022

class A {
    void x() {
    }
    int x() {
        return 1;
    }
}